incubator/chaos-mesh/chaos-mesh/templates/validating-admission-webhooks.yaml
---
# Source: chaos-mesh/templates/validating-admission-webhooks.yaml
# Copyright 2022 Chaos Mesh Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: chaos-mesh-validation
  labels:
    helm.sh/chart: chaos-mesh-2.2.0
    app.kubernetes.io/name: chaos-mesh
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: chaos-mesh
    app.kubernetes.io/version: 2.2.0
    app.kubernetes.io/component: admission-webhook
webhooks:
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-podchaos
    failurePolicy: Fail
    name: vpodchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - podchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-iochaos
    failurePolicy: Fail
    name: viochaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - iochaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-timechaos
    failurePolicy: Fail
    name: vtimechaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - timechaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-networkchaos
    failurePolicy: Fail
    name: vnetworkchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - networkchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-kernelchaos
    failurePolicy: Fail
    name: vkernelchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - kernelchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-stresschaos
    failurePolicy: Fail
    name: vstresschaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - stresschaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-awschaos
    failurePolicy: Fail
    name: vawschaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - awschaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-azurechaos
    failurePolicy: Fail
    name: vazurechaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - azurechaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-gcpchaos
    failurePolicy: Fail
    name: vgcpchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - gcpchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-dnschaos
    failurePolicy: Fail
    name: vdnschaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - dnschaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-jvmchaos
    failurePolicy: Fail
    name: vjvmchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - jvmchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-schedule
    failurePolicy: Fail
    name: vschedule.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - schedules
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-workflow
    failurePolicy: Fail
    name: vworkflow.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - workflows
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-httpchaos
    failurePolicy: Fail
    name: vhttpchaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - httpchaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-physicalmachinechaos
    failurePolicy: Fail
    name: vphysicalmachinechaos.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - physicalmachinechaos
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-physicalmachine
    failurePolicy: Fail
    name: vphysicalmachine.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - physicalmachines
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-chaos-mesh-org-v1alpha1-statuscheck
    failurePolicy: Fail
    name: vstatuscheck.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - statuschecks
---
# Source: chaos-mesh/templates/validating-admission-webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validate-auth
  labels:
    helm.sh/chart: chaos-mesh-2.2.0
    app.kubernetes.io/name: chaos-mesh
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: chaos-mesh
    app.kubernetes.io/version: 2.2.0
    app.kubernetes.io/component: admission-webhook
webhooks:
  - clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiakNDQWxhZ0F3SUJBZ0lRVFJIWUwrdjZXbGl4ZFlxSU5YSE1pekFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFERXcxamFHRnZjeTF0WlhOb0xXTmhNQjRYRFRJeU1EWXhOVEE1TVRBeU1Wb1hEVEkzTURZeApOREE1TVRBeU1Wb3dOREV5TURBR0ExVUVBeE1wWTJoaGIzTXRiV1Z6YUMxamIyNTBjbTlzYkdWeUxXMWhibUZuClpYSXVaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGsKWVpTWGNuUmhDVEJ1OG9nS2wyWUNKSGp0dnhUbldyMHhkRHZVN0NabXYyeXRFVDhTdjZJU2NwYWdwRGtuei9Kdgo2RTNoK0JEK3Iv [...]
      service:
        name: chaos-mesh-controller-manager
        namespace: "default"
        path: /validate-auth
    failurePolicy: Fail
    name: vauth.kb.io
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    rules:
      - apiGroups:
          - chaos-mesh.org
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources: [ "*" ]
